More small fixes trying to get masteries working on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -391,9 +391,9 @@ img.summ-spell {
     }
   }
 
-  &:hover > .mastery-detail {
-    display: block;
-  }
+  // &:hover > .mastery-detail {
+  //   display: block;
+  // }
 
   .mastery-detail {
     display: none;
